--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -85,7 +85,7 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* group classes that has same value */
 .benefit-lead , .benefit-brand , .benefit-brand , .benefit-cost{
     margin-bottom: 32px;
     color: #ffffff;
@@ -101,7 +101,7 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* Group classes that has same value */
 .search-engine-optimization , .online-reputation-management ,.social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
